[package]
name = "udpscatter"
version = "0.1.0"
authors = ["Zhiyuan Wang <wzypublic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha"
docopt = "1.1.0"
serde = { version = "1", features = ["derive"] }
